openshift/cirras-underwriting-jasper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: '#{NAMESPACE}#'
  name: 'cirras-underwriting-jasper-deployment-#{ENV}#'
spec:
  selector:
    matchLabels:
      app: cirras-underwriting-jasper-#{ENV}#
  replicas: 1
  template:
    metadata:
      labels:
        app: cirras-underwriting-jasper-#{ENV}#
        project: brmb-pim-#{ENV}#
    spec:
      volumes:
        - name: jasper-#{ENV}#
          persistentVolumeClaim:
            claimName: jasper-#{ENV}#
        - name: mariadb-#{ENV}#
          persistentVolumeClaim:
            claimName: mariadb-#{ENV}#
      containers:
        - name: mariadb-#{ENV}#
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 200Mi 
          image: >-
            docker.io/bitnami/mariadb:latest
          volumeMounts:
            - name: mariadb-#{ENV}#
              mountPath: /bitnami/mariadb
        - name: jasperreports-#{ENV}#
          resources:
            requests:
              cpu: 400m
              memory: 800Mi
            limits:
              cpu: 800m
              memory: 1600Mi 
          image: >-
            docker.io/bitnami/jasperreports-archived:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: jasper-#{ENV}#
              mountPath: /bitnami/jasperreports
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
