openshift/cirras-underwriting-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: '#{NAMESPACE}#'
  name: 'cirras-underwriting-ui-deployment-#{ENV}#'
spec:
  selector:
    matchLabels:
      app: cirras-underwriting-ui-#{ENV}#
  replicas: 2
  template:
    metadata:
      labels:
        app: cirras-underwriting-ui-#{ENV}#
        project: brmb-pim-#{ENV}#
    spec:
      containers:
        - name: container
          image: '#{IMAGE_BY_DIGEST}#'
          imagePullPolicy: Always
          ports:
            - containerPort: #{TOMCAT_PORT}#
              protocol: TCP
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /pub/cirras-underwriting/
              port: #{TARGET_PORT}#
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              cpu: 150m
              memory: 400Mi 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
