openshift/cirras-underwriting-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cirras-underwriting-api-service-#{ENV}#
  namespace: '#{NAMESPACE}#'
spec:
  selector:
    app: cirras-underwriting-api-#{ENV}#
  ports:
    - protocol: TCP
      port: #{TARGET_PORT}#
      targetPort: #{TARGET_PORT}#
