openshift/cirras-underwriting-jasper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cirras-underwriting-jasper-service-#{ENV}#
  namespace: '#{NAMESPACE}#'
spec:
  selector:
    app: cirras-underwriting-jasper-#{ENV}#
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
