openshift/cirras-underwriting-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cirras-underwriting-ui-service-#{ENV}#
  namespace: '#{NAMESPACE}#'
spec:
  selector:
    app: cirras-underwriting-ui-#{ENV}#
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8443
