openshift/cirras-underwriting-api-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cirras-underwriting-api-route-#{ENV}#
  namespace: '#{NAMESPACE}#'
  labels: {}
spec:
  to:
    kind: Service
    name: cirras-underwriting-api-service-#{ENV}#
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  port:
    targetPort: #{TOMCAT_PORT}#
