openshift/cirras-underwriting-ui-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cirras-underwriting-ui-route-#{ENV}#
  namespace: '#{NAMESPACE}#'
  labels: {}
spec:
  to:
    kind: Service
    name: cirras-underwriting-ui-service-#{ENV}#
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  port:
    targetPort: #{ACTIVE_PORT}#
