openshift/cirras-underwriting-api-db-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 'cirras-underwriting-api-db-access-#{ENV}#'
  namespace: '#{NAMESPACE}#'
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: crunchy-postgres-#{ENV}#
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels: 
            app: "cirras-underwriting-api-#{ENV}#"
